Fix url truncation

--- a/server/src/main/webapp/tpl/device.html
+++ b/server/src/main/webapp/tpl/device.html
@@ -2,12 +2,14 @@
 <td><%= deviceName %></td>
 <td><%= tvName %></td>
 <td class="device-url">
-    <span class="show url"><%= deviceUrl ? deviceUrl : "Отсутствует"  %></span>
+    <span class="show url">
+        <%= deviceUrl ? deviceUrl : "Отсутствует"  %>
+    </span>
     <input type="text" class="form-control url-input hidden">
 </td>
 <td><%= _.helpers.convertJodaToJs(lastHeartbeat) %></td>
 <td>
-    <div class="btn-group">
+    <div class="buttons">
         <button type="button" class="btn btn-info btn-change-url">Сменить ссылку</button>
         <button type="button" class="btn btn-success btn-save-url hidden">Сохранить ссылку</button>
         <button type="button" class="btn btn-danger btn-remove-device">Удалить устройство</button>
